force-app/main/default/objects/Voucher/Voucher.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>