force-app/main/default/objects/Voucher/fields/CIM_Id__c.field-meta.xml
<CustomField>
    <fullName>CIM_Id__c</fullName>
    <externalId>true</externalId>
    <label>CIM Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>