force-app/main/default/objects/Voucher/fields/Is_Voucher_Manually_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Voucher_Manually_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Voucher Manually Created</label>
    <type>Checkbox</type>
</CustomField>