force-app/main/default/objects/Voucher/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <label>Member Email</label>
    <type>Email</type>
</CustomField>