force-app/main/default/objects/Voucher/fields/MobilePrefixed__c.field-meta.xml
<CustomField>
    <fullName>MobilePrefixed__c</fullName>
    <label>MobilePrefixed</label>
    <type>Phone</type>
</CustomField>