force-app/main/default/objects/Voucher/fields/Order_Id_Issue__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Issue__c</fullName>
    <description>Order ID where this voucher has been issued to</description>
    <label>Order Id Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>