force-app/main/default/objects/Voucher/fields/Order_Id_Redeem__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Redeem__c</fullName>
    <description>Order ID where this voucher has been redeemed from</description>
    <label>Order Id Redeem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>