force-app/main/default/objects/Voucher/fields/Order_Id_Redeem_Channel__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Redeem_Channel__c</fullName>
    <description>Original channel associated with Order Redeem ID</description>
    <label>Order Id Redeem Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>