force-app/main/default/objects/Voucher/fields/Reward_Name__c.field-meta.xml
<CustomField>
    <fullName>Reward_Name__c</fullName>
    <formula>VoucherDefinition.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Name</label>
    <type>Text</type>
</CustomField>