force-app/main/default/objects/Voucher/listViews/All_Rewards.listView-meta.xml
<ListView>
    <fullName>All_Rewards</fullName>
    <columns>LoyaltyProgramMember</columns>
    <columns>Name</columns>
    <columns>EffectiveDate</columns>
    <columns>ExpirationDate</columns>
    <columns>Status</columns>
    <columns>MobilePrefixed__c</columns>
    <columns>FaceValue</columns>
    <columns>Promotion</columns>
    <filterScope>Everything</filterScope>
    <label>All Rewards</label>
</ListView>